Migrate to trustlines_shared volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,12 @@ services:
     image: 'trustlines-monitor.dnp.dappnode.eth:0.1.0'
     build: ./build
     volumes:
-      - 'trustlines-validatordnpdappnodeeth_shared:/config'
+      - 'trustlines_shared:/config'
       - 'state:/state'
       - 'reports:/reports'
     restart: on-failure
 volumes:
   state: {}
   reports: {}
-  trustlines-validatordnpdappnodeeth_shared:
+  trustlines_shared:
     external: true
