--- a/releases.json
+++ b/releases.json
@@ -1,9 +1,10 @@
 {
   "0.1.0": {
-    "hash": "/ipfs/QmYj1nKcsuLCCpWWTUiG5pxFgAbVebyTVay31ubXP78vZS",
+    "hash": "/ipfs/QmWFkGP6LCiBgh1eNXZxcVPxjR8wDDVPFLEc4StXwKrsD5",
     "type": "directory",
     "uploadedTo": {
-      "dappnode": "Thu, 21 Nov 2019 12:22:56 GMT"
-    }
+      "dappnode": "Thu, 21 Nov 2019 14:10:38 GMT"
+    },
+    "link": "http://my.dappnode/#/sdk/publish/r=trustlines-monitor.dnp.dappnode.eth&v=0.1.0&h=%2Fipfs%2FQmWFkGP6LCiBgh1eNXZxcVPxjR8wDDVPFLEc4StXwKrsD5&d=0xF35960302a07022aBa880DFFaEC2Fdd64d5BF1c1"
   }
 }
